java 1.8 and mc 1.16.4 support